# uqmarks

./: .dockerignore  .gitignore  README.md  analyse_search.py  app.py  config.py  convert_search_to_sql.py  course.sqlite  course_new.sql  course_ours.sqlite  courses.sql  dash_app.py  database_migration.md  db_connection.py  docker-compose.build.yml  docker-compose.yml  dockerfile  flask_cache.py  get_assessment.py  log_events.py  pyproject.toml  requirements.txt  semesters.json
.github/: dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: PR_build.yml  master_build.yml
course_data/2023s1/: csse2002.json
dash_pages/: courses.py  home.py  hourly.py
migrations/: 20260225_add_event_type_to_search_logs.sql
react-app/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
react-app/src/: .prettierrc  App.css  App.vue  index.css  main.ts
react-app/src/components/: CourseCardItem.vue  CourseCardResults.vue  CourseProfileUrlInput.vue  CourseSearch.vue  GradeDetailsDialog.vue  GradientText.vue  NavBar.vue  PageTitle.vue  SiteFooter.vue
react-app/src/pages/: Analytics.vue  Course.vue  Home.vue  Quiz.vue
react-app/src/plugins/: vuetify.ts
react-app/src/router/: index.ts
react-app/src/types/: home.ts
static/css/: bulma-switch-main.css  index_style.css
static/js/: app.js  course.js  navbar.js  plot.js  quiz.js  wam_course.js
templates/: analytics.html  course_code.html  index.html  invalid.html  quiz.html  wam_calculator.html
tests/: test_api.py
(+4 files in other folders)
