[project]
name = "uqmarks"
version = "1.0.0"
description = "A grade calculator for UQ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "dash>=3.4.0",
    "dash-bootstrap-components>=2.0.3",
    "flask>=3.0.3",
    "flask-caching>=2.3.1",
    "flask-cors>=5.0.1",
    "flask-limiter>=3.12",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "psycopg2-binary>=2.9.11",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.1",
    "requests>=2.28.0",
    "sqlalchemy>=2.0.38",
]
