[project]
name = "uqmarks"
version = "1.0.0"
description = "A grade calculator for UQ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "flask>=3.1.3",
    "flask-caching>=2.4.0",
    "flask-cors>=6.0.2",
    "flask-limiter>=4.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.3.0",
    "lxml>=5.3.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "psycopg2-binary>=2.9.12",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
